Сделан бэкенд в перевом приближении

--- a/backend/.env-example
+++ b/backend/.env-example
@@ -4,8 +4,8 @@ DB_HOST=127.0.0.1
 DB_USER=admin
 DB_PASSWORD=password
 DB_PORT=27017
-DB_NAME=sixcities
-UPLOAD_DIRECTORY=C:\academy-js4\2140935-six-cities-5\uploads\
-STATIC_DIRECTORY=C:\academy-js4\2140935-six-cities-5\static\
+DB_NAME=guitarstore
+UPLOAD_DIRECTORY=C:\academy\guitarstore\project\backend\uploads\
+STATIC_DIRECTORY=C:\academy\guitarstore\project\backend\static\
 JWT_SECRET=secret
 HOST=localhost
