--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,10 +1,10 @@
 PORT=5000
-SALT=saltstring
+SALT=ThisIsASecretSaltString
 DB_HOST=127.0.0.1
 DB_USER=admin
-DB_PASSWORD=password
+DB_PASSWORD=pass
 DB_PORT=27017
 DB_NAME=guitarstore
-STATIC_DIRECTORY=C:\academy\guitarstore\project\backend\images\
+STATIC_DIRECTORY=C:\academy\guitarstore\project\backend\images
 JWT_SECRET=secret
 HOST=localhost
